[package]
name = "esipam"
version = "0.1.0"
authors = ["Ramon Buckland <ramon@thebuckland.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
cqrs-es = "0"
postgres-es = "0"
serde = { version = "1", features = ["derive"]}
serde_json = "1"
ipnetwork = "0"
enumset = { version = "1" }
uuid = { version = "0", features = ["serde", "v4"] }
thiserror = "1"
iron = "0"
router = "*"
postgres = {version = "0", features = ["with-serde_json"]}
postgres-shared = "0"
chrono = "0"

[dev-dependencies]
rand = "*"
